fix: description to update, sort tasks by due_date